# sqlify

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
docs/: basic-queries.md  getting-started.md  index.md
docs/advanced-queries/: auxiliary-queries.md  fields.md  group.md  having.md  order.md
docs/migrations/: basic-usage.md  typer-cli.md
scripts/: test.sh
sqlify/: __init__.py  builder.py  cli.py  dbms.py  exceptions.py  migrations.py  operators.py  session.py  value_objects.py
tests/: __init__.py  main.py  test_builder.py
