[tool.poetry]
name = "sqlify"
version = "0"
description = "A simple sql builder based on standard Python type hints."
authors = ["Gabriel Massadas"]
readme = "README.md"
homepage = "https://github.com/G4brym/sqlify"
documentation = "http://massadas.com/sqlify/"
repository = "https://github.com/G4brym/sqlify"
license = "BSD"
keywords = ["psycopg2", "postgresql", "sqlite", "sqlite3", "sql", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7.0"
sqlite3 = { version = "*", optional = true }
psycopg2-binary = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.812"
flake8 = "^3.9.2"
black = {version = "^21.5-beta.1", python = "^3.7"}
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.9"
mdx-include = "^1.4.1"
coverage = {extras = ["toml"], version = "^5.5"}
autoflake = "^1.4"
isort = "^5.9.3"

[tool.poetry.extras]
postgresql = [ "psycopg2-binary" ]
sqlite = [ "sqlite3" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "init"

[tool.coverage.run]
parallel = true
source = [
    "docs_src",
    "tests",
    "sqlify"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
]

[tool.isort]
profile = "black"
known_third_party = ["sqlify"]
skip_glob = [
    "sqlify/__init__.py",
]


[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end
